Closed Bug 1826881 Opened 1 year ago Closed 1 year ago

Bottom of window: statusbar etc. not shown. `Tasks` subsection lost `Click here to add a new task` button with `Events and Tasks` in `Today Pane`

Categories

(Core :: XUL, defect)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
thunderbird_esr102 --- unaffected
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed
firefox114 --- fixed

People

(Reporter: thomas8, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [dupetome])

Attachments

(2 files)

With Events and Tasks in Today Pane, the Tasks subsection lost Click here to add a new task button (see screenshot): Beta still has the button to add a task, lost on Daily.

Alice, if you have time, having a regression window might help.

Also, when restoring the Thunderbird window to window size, the entire bottom of the window is just cut off and missing, and scrollbars scroll into nowhere, as the entire UI isn't recalculated/adjusted. Which may or may not be the cause here, because even in maximized window state, the button still won't come back.

Flags: needinfo?(alice0775)
See Also: → 1826959

Steps to reproduce:

  1. Start TB w/ new profile
  2. Set Up your Email Address
  3. When System Integration dialog pops up, Skip Integration
  4. Calendar (Alt+3) tab And click ENABLE
  5. Click on 'Click here to add new task'
  6. Type a title of new task and hit Enter
    --- Nothing appear added new task, see Bug 1826959
  7. Click < then > then <
    --- BUG!! 'Click here to add new task' button is missing. still no task, see Bug 1826959

Regression window:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=fe6bde73e9fe159ddab4b678fedc57a5cb27e727&tochange=de9b191c05a1351ce261973a29072e5aee9b6fdb

Tentatively, set Bug 1824767 is as regressor

Flags: needinfo?(alice0775)
Regressed by: 1824767

I can reproduce this with or without bug 1824767. Seems like the layout code is refusing to let the tasks tree shrink. It's much more likely to be a flexbox regression.

Blocks: 1821304
No longer blocks: tb-new-3pane
No longer regressed by: 1824767
Whiteboard: [supernova]

I was wondering why the bottom of the window (status bar and stuff) was occasionally missing.
Strangely, it seems to happen for me simply by going to the calendar tab and the back to the mail tab, if I have "events and tasks" showing i mail (and lots of tasks/events).

I strongly suspect bug 1824957 which is within the regression range. It's also when comm/mailnews/extensions/newsblog/test/browser/browser_feedDisplay.js started to fail on Mac, and that too is because of a tree that can get bigger but refuses to get smaller. Emilio?

Flags: needinfo?(emilio)

Sounds plausible. Does comment 6 help?

Flags: needinfo?(emilio) → needinfo?(geoff)

It works for me locally. I'll do a Try run to double-check, but I assume everything will be fine. Thank you!

Flags: needinfo?(geoff)
Summary: `Tasks` subsection lost `Click here to add a new task` button with `Events and Tasks` in `Today Pane` → Bottom of window: statusbar etc. not shown. `Tasks` subsection lost `Click here to add a new task` button with `Events and Tasks` in `Today Pane`
Whiteboard: [dupetome]
Duplicate of this bug: 1827461
Regressed by: 1824957
Assignee: nobody → emilio
Attachment #9327906 - Attachment description: WIP: Bug 1826881 - Fix suspicious tree invalidation code. → Bug 1826881 - Fix suspicious tree invalidation code. r=jwatt,TYLin,dholbert,#layout
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0bc08cb02f41
Fix suspicious tree invalidation code. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch

Can we uplift to beta?

Flags: needinfo?(emilio)

Comment on attachment 9327906 [details]
Bug 1826881 - Fix suspicious tree invalidation code. r=jwatt,TYLin,dholbert,#layout

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Improves invalidation of <tree> elements. It's a well-contained change which for Firefox at most would only make performance of library window or history sidebars slightly worse on resize (but that's unlikely in practice).
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9327906 - Flags: approval-mozilla-beta?
Component: Mail Window Front End → XUL
Product: Thunderbird → Core
Version: Thunderbird 113 → unspecified

Comment on attachment 9327906 [details]
Bug 1826881 - Fix suspicious tree invalidation code. r=jwatt,TYLin,dholbert,#layout

Approved for 113.0b5.

Attachment #9327906 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: → 1828157
See Also: → 1827882
See Also: → 1822751
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: