Bug 1826881 - Fix suspicious tree invalidation code. r=dholbert

Could probably figure out a reasonable way to add a test for this but I
don't think it's the best use of our time tbh.

Differential Revision: https://phabricator.services.mozilla.com/D175117